--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -2,6 +2,7 @@ body{
 	background-color: #EFEFEF;
 }
 
+/*
 header{
 	background-color: #FFFFFF;
 	border-bottom-width: 2px;
@@ -9,7 +10,7 @@ header{
 	margin-bottom: 10px;
 	padding: 10px;
 }
-
+*/
 .body{
 	background-color: #FFFFFF;
 	margin-bottom: 10px;
